updated changes to 1.17